--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "date-fns": "^4.1.0",
     "expo": "~54.0.12",
+    "expo-image-picker": "~17.0.9",
+    "expo-notifications": "~0.32.14",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
